cleaned up stylesheets

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -2,9 +2,11 @@
 //= require_self
 
 @import "compass"
-@import "content"
 @import "global"
+@import "content"
 @import "accounts"
+@import "member"
+@import "challenge"
 
 
 $bg-blue: #d1e7ed
