--- a/app/assets/stylesheets/member.css.sass
+++ b/app/assets/stylesheets/member.css.sass
@@ -195,3 +195,54 @@
 
 .website
   width: 200px
+
+// all of this came from member.css
+// this may be a problem -- conflicts with something else
+.content-wrapper
+  padding: 20px
+  overflow: auto
+
+.two-cols-bg
+  background: url(http://cloudspokes.s3.amazonaws.com/two-cols-shadow.gif) repeat-y 0 0
+
+span
+  &.job, &.stats
+    display: block
+    color: #000c4c
+    font-size: 13px
+
+.paging
+  margin-top: 5px
+  p
+    color: #0099FF !important
+  a
+    color: #0099FF
+    padding: 0 4px
+    &:hover, &.active
+      background: #e7edea
+      color: #010c4d
+      text-decoration: none
+
+.filters
+  margin-bottom: 10px
+  span
+    padding-right: 20px
+    font-size: 15px
+    color: #b3b9b2
+    a
+      color: #b3b9b2
+      &:hover, &.active
+        color: #000
+        text-decoration: none
+
+
+.page-heading
+  background: url(http://cloudspokes.s3.amazonaws.com/page-heading-bg.gif) no-repeat 0 0
+  padding: 0 20px
+  border-bottom: 1px solid #303b42
+  h2
+    font-size: 45px
+    line-height: 47px
+    font-weight: 400
+    color: #fff
+    padding: 27px 0 15px
