--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -53,7 +53,7 @@
         </div>
         <!-- END Help Nav -->
         <!-- Content Wrapper -->
-        <div class="content-wrapper">
+        <div class="challenge-content-wrapper">
             <!-- List Challenges -->
             <div class="list-challenges full-width-challenges">
                 <!-- Box -->
