--- a/app/views/challenges/register.html.erb
+++ b/app/views/challenges/register.html.erb
@@ -1,6 +1,6 @@
 <div class="page two-cols-bg top-border">
 <!-- Content Wrapper -->
-        <div class="content-wrapper">
+        <div class="challenge-content-wrapper">
             <!-- Widecolumn -->
             <div class="widecolumn fl">
                 <!-- Terms -->
