--- a/app/views/challenges/results.html.erb
+++ b/app/views/challenges/results.html.erb
@@ -1,6 +1,6 @@
 <div class="page two-cols-bg top-border">
 <!-- Content Wrapper -->
-        <div class="content-wrapper">
+        <div class="challenge-content-wrapper">
             <!-- Widecolumn -->
             <div class="widecolumn fl">
                 <!-- Challenge Registrants -->
@@ -8,7 +8,7 @@
 				<p><%= link_to "Back", challenge_path %></p>
 
 				<% if @winners.size == 0 %>
-					<div style="text-align: center; padding:50px"><b> No registrants for this challenge at this time.</b></div>
+					<div style="text-align: center; padding:50px"><b>No winners found for this challenge.</b></div>
 				<% else %>
 					<h3>Winners</h3>
 					<!-- List Members -->
