--- a/app/views/challenges/leaderboard.html.erb
+++ b/app/views/challenges/leaderboard.html.erb
@@ -3,7 +3,7 @@
                 Leaderboards</h1>
         
         <!-- Content Wrapper -->
-        <div class="content-wrapper ">
+        <div class="challenge-content-wrapper ">
         <h4><span></span></h4>
 
             <!-- Leaderboards -->
