ton of cleanup changes

--- a/app/assets/stylesheets/accounts.css.sass
+++ b/app/assets/stylesheets/accounts.css.sass
@@ -38,17 +38,7 @@
       a.active
         background-position: 0 -35px
         color: #FFFFFF
-        text-decoration: none
-
-  .button
-    background: url("http://cloudspokes.s3.amazonaws.com/button-1.gif") no-repeat scroll 0 0 transparent
-    color: #FFFFFF
-    display: inline
-    float: left
-    font-size: 14px
-    height: 26px
-    line-height: 26px
- 
+        text-decoration: none 
  
   .widecolumn
     #project-overview
@@ -121,7 +111,7 @@
         margin-bottom: 10px
         padding: 6px 5px
         width: 120px
-        height: 30px
+        height: 16px
       .required
         color: Red
       .Uname
@@ -130,7 +120,7 @@
         margin-bottom: 10px
         padding: 6px 5px
         width: 368px
-        height: 30px
+        height: 16px
       select
         display: inline
         float: left
@@ -148,23 +138,27 @@
         margin-right: 6px
         text-align: right
         width: 70px
-        height: 30px
-      .buttons
-        margin-left: 140px
-        .button
-          padding-left: 20px
-          span
-            padding-right: 20px
-            background-position: right 0
-            padding-left: 0
-            background: url("http://cloudspokes.s3.amazonaws.com/button-1.gif") no-repeat scroll 0 0 transparent
-            color: #FFFFFF
-            display: inline
-            float: left
-            font-size: 14px
-            height: 26px
-            line-height: 26px
-        .button:hover
-          span
-            background-position: right -26px
+        height: 16px
             
+#outstanding-reviews
+  font-size: 12px
+  background: #fff
+  margin-bottom: 50px
+  width: 650px
+  border-collapse: collapse
+  text-align: left
+
+#outstanding-reviews th
+  font-size: 14px
+  font-weight: normal
+  color: #6699C9
+  padding: 10px 8px
+  border-bottom: 2px solid
+
+#outstanding-reviews td
+  border-bottom: 1px solid #ccc
+  padding: 6px 8px
+
+#button-container
+  margin-left: 100px
+  margin-top: 15px
