--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -8,7 +8,6 @@
 @import "member"
 @import "challenge"
 
-
 $bg-blue: #d1e7ed
 $border-blue: #456179
 $link-color: #09f
@@ -202,8 +201,52 @@ a.btn
 .button:hover span  
   background-position: right -26px 
 
+.notice
+  border: solid 1px #4F8A10 
+  background: #DFF2BF
+  color: #000000
+  padding: 8px
+  text-align: center
+  margin-right: 25px
+  margin-bottom: 25px
 
-.field_with_errors 
-  padding: 2px
-  background-color: red
-  display: table
+.warning
+  border: solid 1px #9F6000 
+  background: #FEEFB3
+  color: #000000
+  padding: 8px
+  text-align: center
+  margin-right: 25px
+  margin-bottom: 25px
+
+.error
+  border: solid 1px #D8000C 
+  background: #FFBABA
+  color: #000000
+  padding: 8px
+  text-align: center
+  margin-right: 25px
+  margin-bottom: 25px
+
+.third_party_no_email 
+  margin-top: 5px
+  margin-bottom: 25px
+
+.post-third_party_no_email .holder 
+  background: url("http://cloudspokes.s3.amazonaws.com/textarea-1.gif") repeat scroll 0 0 transparent
+  height: 84px
+  margin-bottom: 10px
+  padding: 5px
+  width: 448px
+
+.third_party_no_email .field 
+  background: none repeat scroll 0 0 #FFFFFF
+  border: 1px solid #CCCCCC
+  color: #666666
+  display: inline
+  font-size: 13px
+  height: 16px
+  margin-bottom: 10px
+  padding: 6px 5px
+  width: 200px
+
