--- a/app/views/accounts/password.html.haml
+++ b/app/views/accounts/password.html.haml
@@ -5,17 +5,16 @@
 
     .widecolumn.fr
       #account
+        = flash_messages
         %h3 Change your password
-        = flash[:notice]
         .cl
-        %p To change your password we will email you a temporary passcode. You will then need to use this passcode to change your password.
         - if @account["Login_Managed_By__c"].eql?('CloudSpokes')
+          %p To change your password we will email you a temporary passcode. You will then need to use this passcode to change your password.
           = form_tag("/account/password?reset=true", :name => "form_password")
           %hidden.txt{:maxlength => 100, :name => "form_password[old_password]", :value => "#{current_user.username}"}
           %br
-          #button-right.buttons
-            %div{:style => "float:left;padding-right:10px;"}
-              %a.button{:href => "#", :onclick => "document['form_password'].submit()"}
-                %span Send me a passcode
+          #button-container
+            %a.button{:href => "#", :onclick => "document['form_password'].submit()"}
+              %span Send me a passcode
         - else
           %p You are logging into CloudSpokes with your #{@account["Login_Managed_By__c"]} account. You will need to change your password at #{@account["Login_Managed_By__c"]}.
