--- a/app/views/accounts/password_reset.html.haml
+++ b/app/views/accounts/password_reset.html.haml
@@ -5,8 +5,7 @@
 
     .widecolumn.fr
       #account
-        %p.red
-          =flash[:notice]
+        = flash_messages
         %h3 Reset your password
         %p Use the passcode in the email being sent to you to reset your password below.
         %br
@@ -28,10 +27,10 @@
         %input.txt{:maxlength => 100, :name => "form_reset_password[new_password_again]"}
         .cl
         %br
-        #button-right.buttons
-          %div{:style => "float:left;padding-right:10px;"}
-            %a.button{:href => "#", :onclick => "document['form_reset_password'].submit()"}
-              %span Submit
+        #button-container
+          %a.button{:href => "#", :onclick => "document['form_reset_password'].submit()"}
+            %span Submit
+
 
 
 
