--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -57,7 +57,7 @@
             <!-- List Challenges -->
             <div class="list-challenges full-width-challenges">
                 <!-- Box -->
-                
+                <%= flash_messages %>
                 <div>
 				<% if @challenges.nil? %>
 					<div style="text-align: center; padding:50px"><b> No open challenges found! </b></div>
