--- a/app/views/challenges/leaderboard.html.erb
+++ b/app/views/challenges/leaderboard.html.erb
@@ -1,11 +1,9 @@
         <div class="page">
-            <h1 id="heading">
-                Leaderboards</h1>
+            <h1 id="heading">Leaderboards</h1>
         
         <!-- Content Wrapper -->
         <div class="challenge-content-wrapper ">
-        <h4><span></span></h4>
-
+			<%= flash_messages %>
             <!-- Leaderboards -->
             <div id="leaderboards">
                 <!-- Columns -->
