--- a/app/views/challenges/register.html.erb
+++ b/app/views/challenges/register.html.erb
@@ -6,7 +6,7 @@
                 <!-- Terms -->
                 <span></span>
 				<p><%= link_to "Back", challenge_path %></p>
-
+				<%= flash_messages %>
 				<h3>Challenge Terms and Conditions</h3>
 				<p>You must agree to the terms and conditions of this challenge before competing.</p>
 				<%= @terms.description %>
