--- a/app/views/challenges/submission.html.erb
+++ b/app/views/challenges/submission.html.erb
@@ -19,6 +19,8 @@
                         </ul>
                     </div>
 
+					<%= flash_messages %>
+
 					<% if @current_submissions.length > 0 %>
 					<h3>Current media for your submission</h3>
 
