--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,22 @@
   <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+<script type="text/javascript" src="fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+<link rel="stylesheet" href="fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
+
+<script type="text/javascript">
+$(document).ready(function(){
+	$(".fancy").fancybox({
+		 'width' : '60%',
+		 'height' : '65%',
+		 'autoScale' : false,
+		 'hideOnOverlayClick' : true,
+		 'type' : 'iframe'
+	 });
+});
+</script>
 </head>
 <body id="<%= controller.controller_name %>_<%= controller.action_name %>" class="<%= controller.controller_name %>">
   <div id='wrapper'>
@@ -22,16 +38,13 @@
         <li><%= link_to "Blog", "http://blog.cloudspokes.com/" %></li>
         <li><%= link_to "FAQ", "/faq" %></li>
         <% if current_user.nil? %>
-			<li><%= link_to "Login", "/login" %></li>
+			<li><%= link_to "Login", "/login", :class => "fancy" %></li>
 		<% else %>
 			<li><%= link_to "Logout", "/logout" %></li>
 		<% end %>
       </ul></nav>
     </header>
     <section id='content'>
-	  <% flash.each do |key, value| %>
-	   <div class="flash <%= key %>"><%= value %></div>
-	  <% end %>
       <%= yield %>
     </section>
     <footer id='bottom'>
