--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -29,6 +29,7 @@
         <span></span>
         <div class="content-wrapper two-cols-bg">
             <div class="widecolumn fl">
+				<%= flash_messages %>	
                 <!-- List Members -->
                 <div class="list-members">
                     
