--- a/app/views/members/recommend.html.erb
+++ b/app/views/members/recommend.html.erb
@@ -1,6 +1,7 @@
 <div class='content-wrapper two-cols-bg'>
   <div class='widecolumn fl'>
     <p><%= link_to 'Back', member_path %></p>
+	<%= flash_messages %>
 	<div class="post-submission">
 	    <h3>Post a Recommendation</h3>
 	    <fieldset>
