added the public profile page

--- a/app/assets/stylesheets/accounts.css.sass
+++ b/app/assets/stylesheets/accounts.css.sass
@@ -162,3 +162,40 @@
 #button-container
   margin-left: 100px
   margin-top: 15px
+
+#profile
+  label
+    display: inline
+    float: left
+    line-height: 28px
+    margin-right: 6px
+    text-align: right
+    width: 120px
+  textarea
+    color: #666666
+    display: block
+    font-size: 14px
+    height: 84px
+    width: 448px
+    font-size: 13px
+    padding: 6px 5px
+    margin-bottom: 10px
+  .spacer
+    padding-bottom: 5px
+  input
+    background: none repeat scroll 0 0 #FFFFFF
+    border: 1px solid #CCCCCC
+    font: 11px Arial,Sans-Serif
+    display: inline
+    font-size: 13px
+    color: #666666
+  .field
+    margin-bottom: 10px
+    padding: 6px 5px
+    width: 150px
+    height: 16px
+  .txt
+    margin-bottom: 10px
+    padding: 6px 5px
+    width: 120px
+    height: 16px
