tweaked display pages

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -207,8 +207,9 @@ a.btn
   color: #000000
   padding: 8px
   text-align: center
+  margin-top: 15px
   margin-right: 25px
-  margin-bottom: 25px
+  margin-bottom: 15px
 
 .warning
   border: solid 1px #9F6000 
@@ -216,8 +217,9 @@ a.btn
   color: #000000
   padding: 8px
   text-align: center
+  margin-top: 15px
   margin-right: 25px
-  margin-bottom: 25px
+  margin-bottom: 15px
 
 .error
   border: solid 1px #D8000C 
@@ -225,8 +227,9 @@ a.btn
   color: #000000
   padding: 8px
   text-align: center
+  margin-top: 15px
   margin-right: 25px
-  margin-bottom: 25px
+  margin-bottom: 15px
 
 .third_party_no_email 
   margin-top: 5px
