--- a/app/views/challenges/results.html.erb
+++ b/app/views/challenges/results.html.erb
@@ -14,7 +14,7 @@
 					<!-- List Members -->
 	                <div class="list-members">
 						<% @winners.each do |record| %>
-							<% if !record["Place__c"].nil? %>
+							<% if record["Has_Submission__c"] %>
 							<div class="box">
 								<div class="box-b">
 									<div class="box-t">
@@ -22,9 +22,9 @@
 		                             		<a href='/members/<%= record["Member__r"]["Name"] %>'><img class="member-pic" src="<%= record["Member__r"]["Profile_Pic__c"] %>" style="height:48px;width:48px;border-width:0px;" /></a>
 											<div class="text-holder">
 												<h4><a href='/members/<%= record["Member__r"]["Name"] %>'><%= record["Member__r"]["Name"] %></a></h4>
-												<span class="stats">Place: <%= record["Place__c"] %></span>
-												<span class="stats">Points: <%= record["Points_Awarded__c"] %></span>
+												<% if !record["Place__c"].nil? %><span class="stats">Place: <%= record["Place__c"] %></span><% end %>
 												<span class="stats">Money: $<%= record["Money_Awarded__c"].to_i %></span>
+												<span class="stats">Points: <%= record["Points_Awarded__c"] %></span>
 											</div>
 											<div class="cl"></div>
 										</div>
