--- a/app/views/members/recommend.html.erb
+++ b/app/views/members/recommend.html.erb
@@ -13,7 +13,7 @@
 					<a class="button fl" onclick="document.forms[0].submit();"> <span>Post</span></a>
 				<% end %>
 			<% else %>
-				Please login to post a comment.
+				Please <a href="/login" class="fancy">login</a> to post a comment.
 			<% end %>
 	    </fieldset>
 	</div>
