--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,14 @@
   <%= csrf_meta_tags %>
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
-<script type="text/javascript" src="fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-<link rel="stylesheet" href="fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
+<script type="text/javascript" src="/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+<link rel="stylesheet" href="/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
 
 <script type="text/javascript">
 $(document).ready(function(){
 	$(".fancy").fancybox({
-		 'width' : '60%',
-		 'height' : '65%',
+		 'width' : '75%',
+		 'height' : '70%',
 		 'autoScale' : false,
 		 'hideOnOverlayClick' : true,
 		 'type' : 'iframe'
