--- a/app/views/content/about.html.erb
+++ b/app/views/content/about.html.erb
@@ -1,5 +1,5 @@
 <div class="page">
-  <h1 id='heading'>How It Works</h1>
+  <h1 id='page-heading'>How It Works</h1>
             <!--
             <h4>
 
