--- a/app/views/members/_challenge.html.haml
+++ b/app/views/members/_challenge.html.haml
@@ -13,7 +13,6 @@
             = "$#{challenge['Challenge_Participants__r']['records'].first['Money_Awarded__c'].round} for"
             %br
             %span
-              - challenge["Challenge_Categories__r"]["records"].each do |category|
-                %span{:class =>category["Category__r"]["Name"]}= category["Category__r"]["Name"]
+              = member_category_display(challenge["Challenge_Categories__r"])
             %br
         .cl  
