--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -56,7 +56,7 @@ nav ul
 #content
   clear: both
   background: white
-  border: 9px solid $border-blue
+  //border: 9px solid $border-blue
   border-left: 0
   border-right: 0
   overflow: auto
